# shplat

./: Cargo.toml  build.rs
assets/scenes/: ar_1.scn.ron  ar_2.scn.ron  gravity_1.scn.ron  gravity_2.scn.ron  gravity_3.scn.ron  gravity_4.scn.ron  gravity_5.scn.ron  laser_1.scn.ron  level_one.scn.ron  rocket_1.scn.ron  shotgun_1.scn.ron  shotgun_10.scn.ron  shotgun_11.scn.ron  shotgun_12.scn.ron  shotgun_2.scn.ron  shotgun_3.scn.ron  shotgun_4.scn.ron  shotgun_5.scn.ron  shotgun_6.scn.ron  shotgun_7.scn.ron  shotgun_8.scn.ron  shotgun_9.scn.ron
src/: inspector.rs  level.rs  main.rs  player.rs  weapon.rs
