[package]
name = "shplat"
version = "0.1.0"
edition = "2024"

[features]
default = ["debug", "bevy/dynamic_linking"]
debug = [
  "avian2d/debug-plugin",
  "bevy/reflect_auto_register",
  "bevy/track_location",
  # inspector
  "bevy/bevy_sprite_picking_backend",
  "bevy/bevy_ui_picking_backend",
  "bevy/bevy_picking",
  "bevy/bevy_post_process", # wireframes
  "bevy-inspector-egui",
  "bevy_egui",
  "bevy_simple_text_input",
]

[dependencies]
bevy = { version = "0.17", default-features = false, features = [
  "std",
  "multi_threaded",
  "bevy_log",
  "bevy_window",
  "bevy_winit",
  "bevy_sprite_render",
  "bevy_ui_render",
  "bevy_gizmos",
  "bevy_text",
  "bevy_gilrs",
  "wav",
  "png",
  # scene stuff
  "bevy_scene",
  "async-io",

  # TODO: remove
  "default_font",
] }
avian2d = { version = "0.4", default-features = false, features = [
  "2d",
  "f32",
  "parry-f32",
  "simd",
] }
bevy_enhanced_input = "0.20.0"
bevy_tween = "0.10"
rand = "0.9.2"
bevy_rand = { version = "0.12", default-features = false, features = [
  "std",
  "thread_local_entropy",
  "wyrand",
] }

# debug
bevy_egui = { version = "0.38.0", optional = true }
bevy-inspector-egui = { version = "0.35", optional = true }
bevy_simple_text_input = { version = "0.12", optional = true }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 0

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
